--- a/Soelvkikkert/appsettings.json
+++ b/Soelvkikkert/appsettings.json
@@ -1,11 +1,8 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "SubscriberContext": "Data Source=SoelvkikkertDB.db"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
     }
+  },
+  "AllowedHosts": "*"
 }
