--- a/Soelvkikkert/appsettings.json
+++ b/Soelvkikkert/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "SubscriberContext": "Data Source=SoelvkikkertDB.db"
     }
-  },
-  "AllowedHosts": "*"
 }
