Add product context

--- a/Soelvkikkert/appsettings.json
+++ b/Soelvkikkert/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VitecContext": "Server=(localdb)\\mssqllocaldb;Database=VitecContext-d5695969-e738-4564-9e24-b05a50d2eb3d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
