Revert "Merge branch 'CreateSeedData'"
This reverts commit 3bcf7fbff053f0821d827b2310859c2cac772dc5.

--- a/Soelvkikkert/appsettings.json
+++ b/Soelvkikkert/appsettings.json
@@ -1,11 +1,11 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "SubscriberContext": "Data Source=SoelvkikkertDB.db"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VitecContext": "Server=(localdb)\\mssqllocaldb;Database=VitecContext-d5695969-e738-4564-9e24-b05a50d2eb3d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
