OneCommitKenniBackAtItAgainWitDemCommits and AddLoggingForEverything

--- a/Soelvkikkert/appsettings.json
+++ b/Soelvkikkert/appsettings.json
@@ -1,7 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Trace",
+      "Microsoft": "Trace"
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning",
+        "Microsoft": "Warning"
+      }
     }
   },
   "AllowedHosts": "*",
