--- a/SoelvkikkertMVC/appsettings.json
+++ b/SoelvkikkertMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VitecContext": "Server=(localdb)\\mssqllocaldb;Database=VitecContext-64bae6d1-83e7-4ecb-b5ba-7a733bcb2d8d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
