Switch login DB to sqlite

--- a/MVCLogin/appsettings.json
+++ b/MVCLogin/appsettings.json
@@ -14,6 +14,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "VitecContext": "Server=(localdb)\\mssqllocaldb;Database=VitecContext;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-64bae6d1-83e7-4ecb-b5ba-7a733bcb2d8d;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "Data Source=app.db"
   }
 }
