SQLite for product db
^^

--- a/MVCLogin/appsettings.json
+++ b/MVCLogin/appsettings.json
@@ -13,7 +13,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VitecContext": "Server=(localdb)\\mssqllocaldb;Database=VitecContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "VitecContext": "Data Source=vtec.db",
     "ApplicationDbContext": "Data Source=app.db"
   }
 }
